@@ -7,13 +7,13 @@ Word of caution: please be very careful when using something with real account. 
 ## Building your adapter
 
 - Make sure you have gradle installed and added to your path variable. If not - see https://gradle.org/install/
-- Make sure that your gradle is set to use Java 8
+- Use correct Java version - check the [General tips on running Bookmap with any IDE](#General tips on running Bookmap with any IDE).
 - Clone the repository: `git clone https://github.com/BookmapAPI/DemoStrategies.git`
 - Go to `Strategies` subfolder of the repository (the one with `build.gradle` file in it).
 - Run `gradle jar`. If everything was done correctly - gradle will tell you that build was successful.
 - In `Strategies/build/libs` subfolder (relative to the root of the repository) you should now have `bm-strategies.jar` - those are your indicators and strategies compiled and ready to be loaded into Bookmap
 
-If you have Gradle installed and configured to use Java 8, you can simply run these commands:
+If you have Gradle installed and configured to use the correct Java version, you can simply run these commands:
 ```
 git clone https://github.com/BookmapAPI/DemoStrategies.git
 cd DemoStrategies/Strategies
@@ -234,17 +234,83 @@ Note that repository also contains javadoc, and while it's far from perfect it s
 
 ## IDE and tricks
 
-You should be able to use any IDE you like as long as it supports Gradle. The process was validated with Eclipse, but it is not the only option (and, as shown earlier - you don't even really need an IDE). You might have to add and configure certain gradle plugins though, depending on the IDE you chose. In Eclipse you just need to import gradle project from `Strategies` directory using Buildship plugin.
+### Running Bookmap with IDE
 
-You might also want to run Bookmap from IDE. This will make development faster and also allow you to attach debugger to Bookmap and debug your code. In order to do this:
-- Use 64 bit Java 8 VM
-- Sometimes your IDE may ignore your gradle source/target compatibility settings for Java (if you have those). Ensure it is Java 8 in your project environment/compiler settings. If not, set it explicitly in the project settings.
+Running Bookmap with IDE is simply running the `Bookmap.jar` app.
+
+You should be able to use any IDE you like as long as it supports Gradle. You might have to add and configure certain gradle plugins though, depending on the IDE you chose. In Eclipse you just need to import gradle project from `Strategies` directory using Buildship plugin.
+
+#### General tips on running Bookmap with any IDE
+
+- Check the JRE version used in your Bookmap release: open `C:\Program Files\Bookmap\jre\bin` in your terminal (the path might be different on your machine
+  if you changed the installation directory), and execute `.\java --version`. You can use the same JDK version for development.
+  Also, at the time of writing, Bookmap ver. 7.2 and onwards can be run with JVM ver. 14. Note, however, that this might be changed in the future.
+- Sometimes your IDE may ignore your gradle source/target compatibility settings for Java (if you have those). Ensure the Java version is the same in your project environment/compiler settings. If not, set it explicitly in the project settings.
 - Sometimes your IDE may handle your gradle compileOnly dependencies incorrectly and still add those to classpath. **This will usually result in NoSuchMethodError or NoClassDefFoundError**. You can verify that this is the case by checking `java.class.path` system properly of the process that you started via Java VisualVM on in any other way - it shouldn't contain any of compileOnly dependencies, so if it does - this is a problem. To solve it you can either (hackish simple way) edit build.gradle to point to the libraries from `C:\Program Files\Bookmap\lib` directory (which will ensure that those are the same exact libraries that bookmap expects, preventing the crash) or (more correct way, but exact way to achieve it differs from one IDE to another) remove the project and project dependencies from run configuration.
-- Working directory will determine where your config folder will be. Note that Bookmap will create some folders next to it (not within it). On Windows you can set `C:\Bookmap\Config`, which is the default during installation, but you can also maintain multiple separate Bookmap configs, if you want.
+- Working directory will determine where your config folder will be. On Windows you can set `C:\Bookmap`, which is the default during installation, but you can also maintain multiple separate Bookmap configs, if you want.
 - Add `C:\Program Files\Bookmap\Bookmap.jar` to the classpath. It should list the dependencies in manifest, so that will often be enough, but you can include libraries from `C:\Program Files\Bookmap\lib` if Bookmap complains about missing classes.
-- Start velox.ib.Main
+- If you are using Java 16 or newer, add the list of `--add-opens` JVM args to your run configuration:
+```
+--add-opens=java.base/java.lang=ALL-UNNAMED
+--add-opens=java.base/java.io=ALL-UNNAMED
+--add-opens=java.base/java.math=ALL-UNNAMED
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+--add-opens=java.base/java.net=ALL-UNNAMED
+--add-opens=java.base/java.text=ALL-UNNAMED
+--add-opens=java.desktop/java.awt=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.color=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED
+--add-opens=java.desktop/com.sun.java.swing=ALL-UNNAMED
+--add-opens=java.prefs/java.util.prefs=ALL-UNNAM
+--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED // this one is needed only for Windows
+```
+- When started from an IDE on a Windows machine, your Bookmap might look different from what you see when you 
+start it from the desktop shortcut. If you see black areas on a heatmap, this is caused by Java scaling issues.
+To fix this:
+  - Find the `java.exe` file of the JDK that you use to start Bookmap from an IDE
+  - Right-click on it, go to `Properties -> Compatibility`.
+  - Press the `Change high DPI settings` button. In the opened window, check the `Override high DPI scaling behavior. Scaling performed by:` checkbox.
+  - In the dropdown below select `System` or `System (Enhanced)`
+- Start `velox.ib.Main`
 
-Now you should be able to start bookmap from IDE directly. 
+#### Running Bookmap with IntelliJ IDEA
+
+You can either manually create a run configuration, or modify the configuration in `build.gradle` of this project.
+
+##### Import the built-in run configuration
+
+1. Open the project with IntelliJ IDEA. If it wasn't automatically imported, right-click on `build.gradle` and
+press `Link Gradle Project`.
+2. After the import, you should see a run configuration created, named `BookmapJar`.
+3. Try to start the configuration. If it doesn't work, check that paths to your Bookmap.jar
+and your working directory are correct - you need to update them in `build.gradle` if you changed
+the default installation paths.
+4. You might need to change the project JDK version (in `File -> Project Structure -> SDK`),
+for details on Java version, check out [General tips on running Bookmap with any IDE](#General tips on running Bookmap with any IDE).
+
+Note that if you make any changes to this run configuration in your IDE, they will be overwritten on gradle project sync.
+You need to either only modify the config in `build.gradle`, or, after successful import of the config,
+remove it from `build.gradle`.
+
+##### Manually create IntelliJ run configuration
+
+1. In your module project, create a `JAR Application` run configuration: Navigate `Edit configurations... -> Add New Configuration`, select `JAR Application`
+2. Set 'Path to jar': `C:\Program Files\Bookmap\Bookmap.jar` (note that it might be different on your machine
+if you changed the installation directory)
+3. Set 'Working directory': `C:\Bookmap\Config`
+4. Set the JDK. Check which JDK version to use in [General tips on running Bookmap with any IDE](#General tips on running Bookmap with any IDE).
+5. For Java ver. 16 or newer - add `--add-opens` JVM args - check out [General tips on running Bookmap with any IDE](#General tips on running Bookmap with any IDE).
+6. Save the config, and try to run it. If everything worked right, Bookmap will start.
+
+If you want to **attach a debugger**, run the configuration in `Debug` mode (a button next to `Run`).
+You should see a record in the process logs like: `Connected to the target VM, address: '127.0.0.1:63518', transport: 'socket'`
+
+Also, you may now use the breakpoints.
+
+### Simplifying L1 module code reload
+
+Note that the following is only applicable to L1 module, but not the L0.
 
 You might want to avoid packing jar every time you want to make changes. Best way to do it is the following:
 - create empty `bm-strategy-package-fs-root.jar` file in a folder where your class files are. E.g. it could be something like `Strategies\build\classes\java\main` (though it will usually be different depending on your IDE). This folder will be passed to URLClassLoader, so it should contain folder(s) matching top level package names, which contain either other folders corresponding to lower level package names or class files, e.g. `HelperStrategySettings.class`.
